# object_detection_in_cplusplus

./: .gitignore  CMakeLists.txt  README.md
include/: detector.h
src/: detector.cpp  main.cpp  utils.cpp
